# C-Project

./: CMakeLists.txt  main.c  test.c
data/: accountAdmin.txt
include/: category.h  datatype.h  function.h  product.h  user.h
src/: category.c  function.c  product.c  user.c
